# Game-Console

./: .gitignore  .gitmodules  LICENSE  README.md  example_game.py  pyproject.toml  requirements.txt  temp
console_commands/: exit.py  test.py
console_configs/: console_config01.json  console_config03.json  console_config06.json
examples/: demo.py
examples/commands/: move.py
examples/configs/: config_01.json  config_01.jsonc  config_01b.json  config_01b.jsonc  config_02.json  config_02.jsonc  config_02b.json  config_02b.jsonc  config_03.jsonc  config_03b.json  config_04.jsonc  config_04b.jsonc  config_05.json  config_05b.jsonc  config_06.json  config_06.jsonc  config_06b.json  config_06b.jsonc  console_config_01.json  console_config_01b.json  console_config_02.json  console_config_04.json  console_config_05.json
examples/console_configs/: console_config01.json
examples/console_fonts/truetype/: 6x13-iso8859-12.fon  9x18-iso8859-12.fon
examples/fonts/bitmap/: charset_id1.json  charset_id5.json  charset_moon1.json  good_neighbours_font.json  red_gradient_capital_font.json  simple.json  small_font.json  url.txt
examples/scripts/: example1.scr  example3.scr  long_command.scr  long_print.scr  long_py_script.scr  long_script.scr
pgconsole/: __init__.py
pygame_console/: CONTRIBUTING.md  CREDITS.md  README.md  __init__.py  game_console.py  requirements.txt
pygame_console/commands/: move.py  test.py
pygame_console/fonts/: 6x12-iso8859-1.fon
pygame_console/scripts/: example.cns  example2.scr
tests/: dims.csv  pyproject.toml  test_command_line_processor.py
